confik-macros/tests/trybuild/fail-derive-literal.rs
#[derive(confik::Configuration)]
#[confik(derive("hello world"))]
struct A;

fn main() {}
